--- a/changelog.txt
+++ b/changelog.txt
@@ -1,2 +1,5 @@
-v0.1.0  (2021-07-26)
-- Initial release. It works under Kodi 17+
+v0.9.0  (2021-07-26)
+Initial release. It should works with python 2.x and Kodi 17
+
+v1.0.0  (2021-07-26)
+works with python 2.x and  Kodi 18
