--- a/changelog.txt
+++ b/changelog.txt
@@ -1,2 +1,11 @@
-v0.1.0  (2021-07-26)
-- Initial release. It works under Kodi 17+
+v0.9.0  (2021-07-26)
+- Initial release. It should works with python 2.x and Kodi 17
+
+v1.0.0  (2021-07-26)
+- works with python 2.x and  Kodi 18
+
+v1.1.0  (2024-02-05)
+- works with python 3.x and  Kodi 19
+
+v1.1.1  (2024-02-05)
+- minor adaptation for python 3 typing and comments
