complete refactor for nexus and RPi5
- works as service
- use gpiozero (that use RPi.GPIO for LE19 and lgpio for LE20+)
- re-tested from LE19+

--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -55,15 +55,19 @@ msgstr ""
 
 
 msgctxt "#32600"
-msgid "Test"
+msgid "Control"
 msgstr ""
 
 msgctxt "#32601"
-msgid "Start Test"
+msgid "Pause"
 msgstr ""
 
 msgctxt "#32602"
-msgid "Stop Addon"
+msgid "Distance (cm)"
+msgstr ""
+
+msgctxt "#32603"
+msgid "Percentage (%)"
 msgstr ""
 
 
@@ -86,16 +90,4 @@ msgstr ""
 
 msgctxt "#32702"
 msgid "No media to play"
-msgstr ""
-
-msgctxt "#32703"
-msgid "Distance: %d cm"
-msgstr ""
-
-msgctxt "#32704"
-msgid "Sensor triggered"
-msgstr ""
-
-msgctxt "#32705"
-msgid "Sensor not triggered"
 msgstr ""
