--- a/changelog.txt
+++ b/changelog.txt
@@ -4,8 +4,12 @@ v0.9.0  (2021-07-26)
 v1.0.0  (2021-07-26)
 - works with python 2.x and  Kodi 18
 
-v1.1.0  (2024-02-05)
+v1.1.0  (2024-09-04)
 - works with python 3.x and  Kodi 19
 
-v1.1.1  (2024-02-05)
+v1.1.0  (2024-02-05)
 - minor adaptation for python 3 typing and comments
+
+v1.2.0  (2024-03-03)
+- works with python 3.x and  Kodi 19+
+- works also on RPi5
